# sknr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  action.yml
crates/sknr-cli/: Cargo.toml
crates/sknr-cli/src/: main.rs
crates/sknr-cli/tests/: scan.rs
crates/sknr-core/: Cargo.toml
crates/sknr-core/src/: executor.rs  github.rs  history.rs  init.rs  lib.rs  model.rs  osv.rs  priority.rs  reachability.rs  remediation.rs  report.rs  sarif.rs  sbom.rs  scanner.rs  summary.rs  threat_intel.rs  topology.rs  verification.rs
docs/: sknr-build-sequence.md  sknr-feature-matrix.md  sknr-tech-stack.md
fixtures/demo-monorepo/: package-lock.json  package.json  sknr.config.yaml
fixtures/demo-monorepo/apps/api-gateway/: package.json
fixtures/demo-monorepo/apps/api-gateway/src/: index.js  reachability.js
fixtures/demo-monorepo/apps/auth-service/: package.json
fixtures/demo-monorepo/apps/auth-service/src/: index.js  reachability.js
fixtures/demo-monorepo/apps/dashboard/: package.json
fixtures/demo-monorepo/apps/dashboard/src/: index.js  reachability.js
fixtures/demo-monorepo/apps/user-service/: package.json
fixtures/demo-monorepo/apps/user-service/src/: index.js  reachability.js
scripts/: github-action-entrypoint.sh
web/dashboard/: README.md  package.json  pnpm-lock.yaml
web/dashboard/app/: globals.css  page.tsx
web/dashboard/components/ui/: badge.tsx  card.tsx
web/dashboard/lib/: sknr-api.ts  sknr-types.ts
