[package]
name = "sknr"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
sknr-core = { path = "../sknr-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
