[package]
name = "sknr-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
petgraph = "0.6"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
walkdir = "2"
